fixed add by ingre alignment issues on S phone

--- a/src/components/searches/search-by/SearchBy.css
+++ b/src/components/searches/search-by/SearchBy.css
@@ -94,7 +94,7 @@
     justify-content: space-evenly;
     background-color: white;
     margin: auto;
-    padding: 30px 30px;
+    padding: 30px;
     max-width: 800px;
     width: 85vw;
     border-radius: 10px;
@@ -103,6 +103,13 @@
 @media only screen and (max-width: 768px) {
     .search-by-container {
         width: 70vw;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .search-by-container {
+        flex-wrap: wrap;
+        justify-content: none;
     }
 }
 
@@ -155,8 +162,6 @@
 
 .ingre-active-include {
     margin: 2px;
-    max-width: 90%;
-    min-width: 100%;
     width: fit-content;
     font-size: 20px;
     border: dotted 2px #f77f00;
@@ -165,8 +170,6 @@
 
 .ingre-active-exclude {
     margin: 2px;
-    max-width: 90%;
-    min-width: 100%;
     width: fit-content;
     font-size: 20px;
     border: dotted 2px grey;
